# frontend_tenant

./: .env.capacitor  .env.development  .env.example  .env.production  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  tukifac-tenant.version.json  vite.config.ts
.github/workflows/: deploy.yml
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
docs/: MULTIPLATAFORMA.md
scripts/: generate-app-icons.mjs  sync-app-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tenant_binding.rs
src/components/: AppErrorBoundary.tsx  AppToaster.tsx  AppVersionBadge.tsx  BranchSwitcher.tsx  Header.tsx  HeaderQuickActions.tsx  PdfBlobViewer.tsx  ReceiptEmailModal.tsx  ReceiptPaperPreview.tsx  ReceiptPrintModal.tsx  SearchableSelect.tsx  Sidebar.tsx  SubscriptionHeaderWidget.tsx  SubscriptionUserMenuItem.tsx  SupportModeBanner.tsx  UbigeoSelects.tsx
src/config/: apiBaseUrl.ts  branding.ts
src/constants/: billingStatus.ts  contactDefaults.ts  homePromotions.ts  homeQuotes.ts  igvAffectation.ts  preparationAreas.ts  productStockRules.ts  sunat.ts  sunatRetentionPerception.ts  sunatUnits.ts  tax.ts
src/contexts/: AuthContext.tsx  BranchCheckoutSeriesContext.tsx  BranchContext.tsx  FeatureContext.tsx  SubscriptionStatusContext.tsx  TenantBindingContext.tsx  (+1 more)
(+310 files in other folders)
