[package]
name = "tukifac-tenant"
version = "1.0.0"
description = "Tukifac Tenant Panel"
edition = "2021"

[lib]
name = "tukifac_tenant"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tukifac-tenant-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
