[package]
name = "tukifac-tenant"
version = "1.1.3"
description = "Tukifac Tenant Panel"
edition = "2021"

[lib]
name = "tukifac_tenant"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tukifac-tenant-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Printing"] }
